<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center">

    <TextView
        android:text="@string/degrees_temp_label"
        android:paddingBottom="15dp"
        style="@style/label_style" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/fahrenheit_toggle_view"
            android:textOn="@string/fahrenheit_abbreviation"
            android:textOff="@string/fahrenheit_abbreviation"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/celsius_toggle_view"
            android:textOn="@string/celsius_abbreviation"
            android:textOff="@string/celsius_abbreviation"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>