<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/cities_spinner_view_label"
            android:layout_marginRight="10dp"
            style="@style/label_style" />

        <Spinner
            android:id="@+id/cities_spinner_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:text="@string/temperature_label"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        style="@style/label_style" />

    <TextView
        android:id="@+id/temp_view"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        style="@style/temp_style" />

    <TextView
        android:text="@string/humidity_label"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        style="@style/label_style" />

    <TextView
        android:id="@+id/humidity_view"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        style="@style/humidity_style" />

    <ImageView
        android:id="@+id/icon_view"
        android:layout_gravity="center_horizontal"
        android:layout_width="45dp"
        android:layout_height="45dp" />

</LinearLayout>
